# anicca-subscribe-matrix

./: .gitignore  CHANGELOG.md  Cargo.toml  anicca.json  cliff.toml  config_example.toml
db-migrate/: Cargo.toml
db-migrate/src/: main.rs
src/: anicca.rs  bot.rs  cli.rs  command.rs  config.rs  main.rs
src/db/: mod.rs  rocksdb.rs  sqlite.rs
