[package]
name = "anicca-subscribe"
version = "0.4.0"
edition = "2024"

[workspace]
members = ["db-migrate"]

[[bin]]
name = "anicca-subscribe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
deadpool-sqlite = { version = "0.11.0", features = ["rt_tokio_1", "tracing"], optional = true }
eyre = "0.6.12"
matrix-sdk = { version = "0.13.0", default-features = false, features = ["eyre", "markdown", "e2e-encryption", "automatic-room-key-forwarding", "sqlite"] }
matrixbot-ezlogin = { version = "0.3", default-features = false }
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "system-proxy"] }
# Use the same version with the one depended by matrix-sdk
rusqlite = { version = "*", optional = true }
rocksdb = { version = "0.23", optional = true }
bincode = { version = "2.0", optional = true }
serde = "1.0"
serde_json = "1.0"
toml = "0.9"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pluralizer = "0.5.0"

[features]
default = ["native-tls", "sqlite"]
sqlite = ["dep:rusqlite", "dep:deadpool-sqlite"]
static-sqlite = ["rustls-tls", "sqlite", "bundled-sqlite"]
native-tls = ["reqwest/native-tls", "matrix-sdk/native-tls", "matrixbot-ezlogin/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "matrix-sdk/rustls-tls", "matrixbot-ezlogin/rustls-tls"]
bundled-sqlite = ["rusqlite/bundled", "matrix-sdk/bundled-sqlite", "matrixbot-ezlogin/bundled-sqlite"]
rocksdb = ["dep:rocksdb", "dep:bincode"]

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1

[dev-dependencies]
once_cell = "1.21.3"
serial_test = "3.2.0"
tempfile = "3.20.0"
